# time_optimizer

./: CMakeLists.txt  README.md  package.xml
data/control_points_data/: controlPoints.txt  control_point_divide1.txt  control_point_divide2.txt  control_point_divide3.txt  control_point_divide4.txt  control_point_divide5.txt  control_point_divide6.txt  control_point_divide7.txt  control_point_divide8.txt  control_point_divide9.txt  control_points1.txt
data/divide_time_data/: divide_time_1.txt  divide_time_2.txt  divide_time_3.txt  divide_time_4.txt  divide_time_5.txt  divide_time_6.txt  divide_time_7.txt  divide_time_8.txt  divide_time_9.txt
data/nearest_obstacle_data/: nearest_obstacles3.txt  nearest_obstacles4.txt  nearest_obstacles5.txt  nearest_obstacles6.txt  nearest_obstacles7.txt  nearest_obstacles8.txt  nearest_obstacles9.txt
include/time_optimizer/: bsplineTimeOptimizer.cpp  bsplineTimeOptimizer.h  timeOptimizer.cpp  timeOptimizer.h  trajectoryDivider.cpp  trajectoryDivider.h  utils.h
src/: data.ptf  test_time_optimizer.cpp
